# Wirevisual

./: .gitignore  :wq  CMakeLists.txt  README.md  main.cpp
epics/: README.md  transprofs_tb.subs  transprofs_tb.template  transprofs_wirescan.template
epics/Adam/: README.md  transprofs_tb.cmd  transprofs_tb.subs
epics/Adam/qt/: Wirescan_tb.ui
forms/: CMakeLists.txt  loading.ui  loading_gif.h  mainwindow.ui
include/: currents.h  fits.h  profiles.h  quads.h  test.h
src/app/: CMakeLists.txt  loading_widget.cpp  loading_widget.h  mainwindow.cpp  mainwindow.h  profiles.h  quads.h  worker.cpp  worker.h
src/logic/: CMakeLists.txt  create_transport.cpp  data_dump.cpp  data_dump.h  data_fetch.cpp  data_fetch.h  data_point.h  epics_commands.h  file_header.h  fitting.cpp  profil_fetch.h  profile_analyze.cpp  profile_analyze.h  profile_fetch.cpp  profile_fetch.h  quad_fetch.cpp  quad_fetch.h  quad_point.h  test.cpp
